--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
+  "scripts": {
+    "start": "parcel serve ./public/index.html"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.19",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.1.0",
     "jest": "^26.6.3",
     "netlify-cli": "^2.69.8",
     "parcel": "^2.0.0-nightly.477",
+    "postcss": "^8.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "faunadb": "^4.0.0",
+    "fontsource-roboto": "^3.1.5",
     "fp-ts": "^2.9.1",
     "highlight.js": "^10.4.1",
-    "monocle-ts": "^2.3.3"
+    "monocle-ts": "^2.3.3",
+    "preact": "^10.5.7",
+    "react-router-dom": "^5.2.0",
+    "tailwindcss": "^2.0.2"
   }
 }
