--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,21 @@
 # example netlify.toml
 [build]
-  command = "yarn build"
-  functions = "functions"
-  publish = "dist"
+command = "yarn build"
+functions = "functions"
+publish = "dist"
 
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+# Uncomment to use this redirect for Single Page Applications like create-react-app.
+# Not needed for static site generators.
+[[redirects]]
+from = "/*"
+status = 200
+to = "/index.html"
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/master/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+# (optional) Settings for Netlify Dev
+# https://github.com/netlify/cli/blob/master/docs/netlify-dev.md#project-detection
+# [dev]
+# command = "yarn start" # Command to start your dev server
+# port = 3000 # Port that the dev server will be listening on
+# publish = "dist" # Folder with the static content for _redirect file
 
-  ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
+# more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
