--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   },
   "devDependencies": {
     "@octokit/core": "^3.2.4",
+    "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-react-refresh": "^2.3.9",
+    "@snowpack/plugin-typescript": "^1.1.1",
     "@types/jest": "^26.0.19",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -17,6 +20,7 @@
     "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "snowpack": "^3.0.0-rc.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
@@ -28,7 +32,9 @@
     "faunadb": "^4.0.0",
     "fontsource-roboto": "^3.1.5",
     "fp-ts": "^2.9.1",
+    "fp-ts-local-storage": "^1.0.3",
     "highlight.js": "^10.4.1",
+    "io-ts": "^2.2.13",
     "monocle-ts": "^2.3.3",
     "preact": "^10.5.7",
     "react-router": "^5.2.0",
