--- a/package.json
+++ b/package.json
@@ -5,23 +5,12 @@
   },
   "devDependencies": {
     "@octokit/core": "^3.2.4",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-react-refresh": "^2.3.9",
-    "@snowpack/plugin-typescript": "^1.1.1",
-    "@types/jest": "^26.0.19",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.6",
     "autoprefixer": "^10.1.0",
-    "jest": "^26.6.3",
-    "netlify-cli": "^2.69.9",
-    "parcel": "^2.0.0-nightly.481",
     "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "snowpack": "^3.0.0-rc.2",
-    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
@@ -30,16 +19,13 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "clsx": "^1.1.1",
-    "faunadb": "^4.0.0",
     "fontsource-roboto": "^3.1.5",
     "fp-ts": "^2.9.1",
     "fp-ts-local-storage": "^1.0.3",
     "highlight.js": "^10.4.1",
     "io-ts": "^2.2.13",
-    "monocle-ts": "^2.3.3",
+    "next": "^10.0.4",
     "preact": "^10.5.7",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "tailwindcss": "^2.0.2"
   },
   "alias": {
